feat: add Telegram stickers and media spoilers
